...
        android:layout_marginTop="317dp"
        android:text="@string/button_to_received_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/invisible_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="34dp"
        android:text="TextView"
        android:textSize="0sp"
...
